# pipenv-uv-migration

./: LICENSE  Pipfile  pyproject.toml
src/: sample.py
