[project]
name = "pipenv-uv-migration"
version = "0.1.0"
description = "Pipenvからuvへの移行プロジェクト"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "xlrd>=2.0.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "taskipy>=1.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.envs.default.scripts]
sample = "python src/sample.py"
format = "black src"
